# DiscordFinalsTTS

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs  streamutil.rs  types.rs
src/commands/: join_leave.rs  join_voice.rs  leave_voice.rs  mod.rs  speak.rs  speak_vs.rs  usage.rs  util.rs
src/elevenlabs/: media.rs  mod.rs  requests.rs  responses.rs  types.rs
